# alembic_migration_test

./: README.md  hello.py  pyproject.toml  test_migrations.py  test_view.py
alembic_migrate/: README.md  alembic.ini  requirements.txt  views.py
alembic_migrate/migrations/: env.py
alembic_migrate/migrations/versions/: create_active_users_view.py  create_tables.py  update_active_users_view.py
alembic_migrate/models/: __init__.py  models.py
