[project]
name = "alembic-migrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "psycopg2>=2.9.10",
    "dotenv>=0.9.9",
    "python-dotenv>=1.0.0",
]
